# broxeen

./: .dockerignore  .env.example  .env.test  .gitignore  .nlp2cmd-env  ACTION_SUGGESTIONS_IMPLEMENTED.md  ADVANCED_CAMERA_DETECTION.md  BROXEEN_V2.1_ARCHITECTURE.md  CAMERA_CREDENTIALS_BUTTONS.md  CAMERA_DISCOVERY_GUIDE.md  CAMERA_MONITORING_CREDENTIALS.md  CAMERA_PREVIEW_ENHANCED.md  CHANGELOG.md  CHANGELOG_NETWORK_IMPROVEMENTS.md  CHAT_SUGGESTIONS_DEMO.md  Dockerfile  Dockerfile.e2e  ENVIRONMENT_INTEGRATION_SUMMARY.md  INLINE_ACTION_HINTS_CAMERA.md  INLINE_ACTION_HINTS_DEMO.md  LOCAL_LLM_INTEGRATION_SUMMARY.md  LOCAL_LLM_README.md  MICROPHONE_TOGGLE_SUMMARY.md  MULTIPLE_INTERFACES_SELECTION.md  Makefile  NETWORK_DETECTION_EXPLAINED.md  NETWORK_SCANNER_FIX_SUMMARY.md  NETWORK_SCAN_IMPROVEMENTS.md  NLP2CMD_INTEGRATION_SUMMARY.md  QUICK_START_NETWORK_SCANNING.md  README.md  SELF_CONFIG_SYSTEM.md  SUBNET_DETECTION_FIX.md  TAURI_NETWORK_DETECTION.md  TODO.md  broxeen.toml.example  create-sample-data.mjs  docker-compose.yml  goal.yaml  index.html  (+42 more)
.cargo/: config.toml
TODO/: .env.example  Cargo.toml  Makefile  README.md  capture.rs  config.rs  database.rs  detector.rs  llm.rs  llmPrompts.ts  main.rs  mobile-development-suggestions.md  motion.rs  pipeline.rs  plan-llm-broxeen.md  query_engine.rs  rust-code-review.md  scene_buffer.rs
TODO/src/contexts/: PluginContext.tsx
TODO/src/core/: bootstrap.ts  intentRouter.ts  pluginRegistry.test.ts
TODO/src/hooks/: useWatchNotifications.ts
TODO/src/persistence/: chatRepository.ts  database.ts  deviceRepository.ts  index.ts
TODO/src/plugins/discovery/: index.ts  networkScanner.ts
TODO/src/plugins/http-browse/: httpBrowse.test.ts  index.ts
TODO/src/plugins/mqtt/: mqttPlugin.ts
TODO/src/plugins/rtsp-camera/: index.ts
TODO/src/reactive/: watchManager.ts
docker/ssh-test/: .gitignore  Dockerfile  README.md  authorized_keys  docker-compose.yml  setup.sh
docs/: SSH_EXAMPLES.md  SSH_INTEGRATION.md  STT_ARCHITECTURE.md
e2e/: chat-features.spec.ts  logging.spec.ts  network-scanning-flow.spec.ts  new-plugins.spec.ts  plugin-system.spec.ts  ssh-docker.spec.ts  ssh-integration.spec.ts  voice-interface.spec.ts
project/: README.md  analysis.toon  context.md  evolution.toon  project.toon  prompt.txt
scripts/: add-camera.sql  add-reolink-camera.mjs  chat-cli.mjs  detect-platform.sh  install-openvino-docker.sh  install-openvino-macos.sh  install-openvino-pip.sh  install-openvino-rhel.sh  install-openvino-ubuntu.sh  install-openvino.sh  motion_pipeline.py  net-diag.mjs  test-broxeen-cli.sh  test-docker.sh  test-email.mjs  test-webrtc.html
src/: App.tsx  debug-intent.test.ts  debug-plugins.test.ts  index.css  main.tsx
src-tauri/: Cargo.toml  broxeen_chat.db-shm  broxeen_chat.db-wal  broxeen_devices.db-shm  broxeen_devices.db-wal  compile_errors.txt  tauri.conf.json  test_anon.rs  test_read.rs
src-tauri/benches/: file_search_bench.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_capture.rs  audio_commands.rs  autostart.rs  browse_rendered.rs  content_cleaning.rs  content_extraction.rs  disk_info.rs  docker.rs  email.rs  file_search.rs  frigate_mqtt.rs  llm.rs  llm_query.rs  local_llm.rs  logging.rs  main.rs  main_changes.rs  motion_detection.rs  network.rs  network_info.rs  network_scan.rs  plan-audio-fix.md  query_schema.rs  remote_machine.rs  rss_parser.rs  settings.rs  setup-audio.sh  ssh.rs  stt.rs  toonic_sidecar.rs  tts.rs  tts_backend.rs  useAudio.ts  useBackendStt.ts  useBackendTts.ts  vision_capture.rs  vision_config.rs  vision_db.rs  vision_detector.rs  vision_llm.rs  (+7 more)
src-tauri/tests/: edge_cases_file_search.rs  integration_file_search.rs  placeholder_test.rs  test_read.rs
src/commands/: browseCommand.test.ts  browseCommand.ts  copyContextCommand.ts  saveSettingsCommand.ts  sendMessageCommand.ts
src/components/: ActionSuggestions.tsx  AlertBridgeComponent.tsx  CameraLiveInline.tsx  CameraPreview.tsx  Chat.test.tsx  Chat.tsx  ChatConfigPrompt.test.tsx  ChatConfigPrompt.tsx  ChatInput.tsx  ChatMessageList.tsx  ChatOverlays.tsx  ChatPersistenceBridge.tsx  CommandHistory.tsx  DeviceDashboardModal.tsx  DeviceStrip.test.tsx  DeviceStrip.tsx  DiagnosticsModal.tsx  ErrorReportPanel.tsx  FileResultsDisplay.tsx  HealthDiagnostic.test.tsx  HealthDiagnostic.tsx  MessageQuickActions.tsx  MessageResultCard.tsx  MicSettingsModal.tsx  NetworkHistorySelector.tsx  NetworkSelector.tsx  QuickActionButtons.test.ts  QuickActionButtons.test.tsx  QuickActionButtons.tsx  QuickCommandHistory.tsx  QuickCommands.tsx  Settings.test.tsx  Settings.tsx  SetupWizardModal.tsx  ThinkingMessage.tsx  TtsControls.test.tsx  TtsControls.tsx  TtsSettingsModal.tsx  WatchBadge.simple.tsx  WatchBadge.tsx
src/config/: appConfig.ts  autoConfig.ts  configStore.test.ts  configStore.ts  watchConfig.ts
src/contexts/: CqrsContext.tsx  pluginContext.tsx
src/core/: actionSchema.test.ts  actionSchema.ts  bootstrap.ts  cache.test.ts  cache.ts  commandBus.test.ts  commandBus.ts  fallbackCli.test.ts  fallbackHandler.test.ts  fallbackHandler.ts  intentRouter.fileSearch.test.ts  intentRouter.llm.test.ts  intentRouter.test.ts  intentRouter.ts  intentSchema.ts  llmIntentClassifier.ts  plugin.types.ts  pluginRegistry.test.ts  pluginRegistry.ts  preferenceLearning.test.ts  preferenceLearning.ts  processRegistry.ts  queryBus.ts  realtimeSync.test.ts  realtimeSync.ts  retry.test.ts  retry.ts  systemContext.test.ts  systemContext.ts  types.ts
src/discovery/: networkScanner.ts  serviceProber.ts  types.ts
test/: broxeen.test.js
test-results/: .last-run.json
(+151 files in other folders)
