[package]
name = "broxeen-vision"
version = "0.1.0"
edition = "2021"
description = "AI Camera Monitoring - Motion Detection Pipeline (RPi5 / N5105)"
authors = ["Tom Sapletta <tom@sapletta.com>"]

[[bin]]
name = "broxeen-vision"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# OpenCV bindings (background subtraction, video capture, image ops)
opencv = { version = "0.93", default-features = false, features = [
    "clang-runtime",
    "videoio",
    "imgproc",
    "video",      # BackgroundSubtractor
    "highgui",
    "imgcodecs",
] }

# ONNX Runtime — YOLOv8n inference
ort = { version = "2.0", features = ["download-binaries"] }

# SQLite
rusqlite = { version = "0.31", features = ["bundled", "blob"] }

# HTTP client — Anthropic API
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image manipulation (JPEG encode, resize)
image = { version = "0.25", features = ["jpeg"] }

# Base64 for LLM API
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config from env / TOML
config = "0.14"

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Channel-based pipeline
flume = "0.11"

# CLI args
clap = { version = "4", features = ["derive"] }

# Atomic stats counter
crossbeam = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# RPi5: enable NEON SIMD
[profile.release.build-override]
opt-level = 3

[features]
default = ["openvino"]
openvino = []   # Intel N5105: use OpenVINO EP for ort
rpi5 = []       # RPi5: use ACL / XNNPACK EP
