[package]
name = "broxeen"
version = "1.0.1"
description = "Broxeen — Przeglądaj Internet przez Chat z TTS"
authors = ["Tom Sapletta <tom@sapletta.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
dotenvy = "0.15"
scraper = "0.20"
dirs = "5"
readability = "0.3.0"
url = "2.5.8"
base64 = "0.22"
cpal = "0.15"
hound = "3.5"
rodio = "0.17"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
local-ip-address = "0.6"
lazy_static = "1"
dns-lookup = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
regex-lite = "0.1"
rumqttc = "0.24"

# ── Vision pipeline (optional, heavy native deps) ────────────────────────────
opencv = { version = "0.93", default-features = false, features = [
    "clang-runtime", "videoio", "imgproc", "video", "imgcodecs",
], optional = true }
ort = { version = "2.0.0-rc.11", features = ["download-binaries"], optional = true }
ndarray = { version = "0.16", optional = true }
image = { version = "0.25", features = ["jpeg"], optional = true }
flume = { version = "0.11", optional = true }
config = { version = "0.14", optional = true }
anyhow = { version = "1", optional = true }
thiserror = { version = "2", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
vision = ["dep:opencv", "dep:ort", "dep:ndarray", "dep:image", "dep:flume", "dep:config", "dep:anyhow", "dep:thiserror", "dep:uuid"]
